feat(main page): add components to MainPage, add mockData for MainPage

--- a/src/shared/components/card/ui/horizontal-card/HorizontalCard.module.scss
+++ b/src/shared/components/card/ui/horizontal-card/HorizontalCard.module.scss
@@ -5,6 +5,14 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+// .text{
+//     -webkit-line-clamp: 3; 
+//     line-clamp: 3;
+//     display: -webkit-box;
+//     -webkit-box-orient: vertical;
+//     overflow: hidden;
+// }
+
 
 .badge{
     position: absolute;
