--- a/src/widgets/menu/ui/menu-area/MenuArea.module.scss
+++ b/src/widgets/menu/ui/menu-area/MenuArea.module.scss
@@ -1,13 +1,22 @@
-.menu{
-    max-height: 872px;
-    width: 100%;
-    padding:10px;
-    padding-right:16px;
-    border-radius: 12px;
-    overflow-y: auto;  
-}
 
-.active{
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.06), 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-    background: #fff;
+.link{
+    display: flex;
+    align-items: center;
+    gap: 11px;
+    width: 100%;
+    
+    span{
+        width: 1px;
+        height: 24px;
+        background-color: #c4ff61;
+        transition: width 0.2s;
+    }
+}
+.activeLink{
+    span{
+        width: 8px;
+    }
+    p{
+        font-weight: 700;
+    }
 }
