--- a/src/app/styles/wendorStyle.scss
+++ b/src/app/styles/wendorStyle.scss
@@ -12,6 +12,7 @@
 *::-webkit-scrollbar-thumb{
     background-color: rgba(0, 0, 0, 0.16);
     border-radius: 8px;
+    width: 4px;
 }
 
 main::-webkit-scrollbar{
